test/library/standard/OS/POSIX/chmod/chmod_nonexistent.good
chmod_nonexistent.chpl:7: error: halt reached - chmod error
